--- a/index.html
+++ b/index.html
@@ -334,7 +334,7 @@
           <div class="container-fluid px-5 padding-large">
             <div class="row">
               <div class="text-center" data-aos="fade-up" data-aos-delay="300">
-                <h2 class="display-1 text-uppercase text-white mt-3">New Vision Optics</h2>
+                <h2 class="display-1 text-uppercase text-white mt-3">Al Mustafa Optics</h2>
                 <p class="text-capitalize text-white fs-5 mb-4">Elevate Your Looks with Spectacular Shades</p>
                 <a href="#" class="btn btn-outline-light btn-wrap">
                   Start Shopping
@@ -347,7 +347,7 @@
           <div class="container-fluid px-5 padding-large">
             <div class="row">
               <div class="text-center" data-aos="fade-up" data-aos-delay="600">
-                <h2 class="display-1 text-uppercase text-white mt-3">New Vision Optics</h2>
+                <h2 class="display-1 text-uppercase text-white mt-3">Al Mustafa Optics</h2>
                 <p class="text-capitalize text-white fs-5 mb-4">Elevate Your Looks with Spectacular Shades</p>
                 <a href="#" class="btn btn-outline-light btn-wrap">
                   Start Shopping
@@ -360,7 +360,7 @@
           <div class="container-fluid px-5 padding-large">
             <div class="row">
               <div class="text-center" data-aos="fade-up" data-aos-delay="900">
-                <h2 class="display-1 text-uppercase text-white mt-3">New Vision Optics</h2>
+                <h2 class="display-1 text-uppercase text-white mt-3">Al Mustafa Optics</h2>
                 <p class="text-capitalize text-white fs-5 mb-4">Elevate Your Looks with Spectacular Shades</p>
                 <a href="#" class="btn btn-outline-light btn-wrap">
                   Start Shopping
